# etl

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: errors.rs  lib.rs
src/dataframe/: config.rs  convert.rs  dataframe.rs  datastore.rs  error.rs  mod.rs  transform.rs
test_data/: matrix_test.csv  matrix_test.yaml  people.yaml  regression_test.ods
tests/: dataframe_test.rs  filter_test.rs  json_toml_test.rs  transform_test.rs
tests/data/: filter_test.toml  json_toml_test.json  json_toml_test.toml  matrix_test.toml  people.csv  people.ods  people.toml  transform_test.toml  transform_test1.csv  transform_test2.csv
