[package]
name = "etl"
description = "A general-purpose extract-transform-load (ETL) tool"
version = "0.1.0"
authors = ["Jamie Blondin <jblondin@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/jblondin/etl"

[dependencies]
csv = "1.0.0-beta.3"
encoding = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
error-chain = "0.11"
num = "0.1"
unittest = "0.1"
wee-matrix = "0.1"
